added jinja templates

--- a/chaiaurDjango/chai/templates/chai/all_chai.html
+++ b/chaiaurDjango/chai/templates/chai/all_chai.html
@@ -5,5 +5,5 @@ Home Page
 {% endblock %}
 
 {% block content %}
-<h1>Chai Aur Code | Home Page</h1>
+<h1>Chai Aur Code | Chai Page</h1>
 {% endblock  %}
